--- a/resume/index.html
+++ b/resume/index.html
@@ -5,12 +5,11 @@
   <link rel="stylesheet" href="resume/css/style.css">
   <meta charseet"UTF-8">
   <meta name="viewport" content="width"
-  <title>Resume</title>
 </head>  
 <body>
   <nav>
     <h1>Miranda Hoyman</h1>
-    <img src="https://static.wikia.nocookie.net/worldofcarsdrivein/images/7/70/CotR_McQueen.png/revision/latest?cb=20220628092148" style="height: 100px" alt="Ka-Chow">
+    <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Lightning_McQueen.png" style="height: 100px" alt="Ka-Chow">
     <ul>
       <li><a href=index.html#contactinfo>Contact Info</a></li>
       <li><a href=index.html#education>Education</a></li>
@@ -19,7 +18,7 @@
     </ul>
   </nav>
 
-<section id="contactinfo">
+<section id="contactinfo" border: 2px var(rgb(98, 145, 240)) solid>
   <h2>Contact Information</h2>
   <p>
     <ul>
@@ -28,7 +27,7 @@
       <li>LinkedIn: <a href="https://www.linkedin.com/in/miranda-hoyman-767352225" target="_blank">Click Here</a></li>
     </ul>
   </section>
-  <section id="education">
+  <section id="education" border: 2px var(rgb(98, 145, 240)) solid>
     <h2>Education</h2>
     <p>
       <ol>
@@ -37,7 +36,7 @@
       </ol>
     </p>
   </section>
-  <section id="experience">
+  <section id="experience" border: 2px var(rgb(98, 145, 240)) solid>
     <h2>Experience</h2>
     <p>
       <ol>
@@ -47,7 +46,7 @@
       </ol>
     </p>
   </section>
-  <section id="skills">
+  <section id="skills" border: 2px var(rgb(98, 145, 240)) solid>
   <h2>Skills</h2>
     <p>
       <ul>
