--- a/resume/index.html
+++ b/resume/index.html
@@ -3,8 +3,9 @@
   
 <head>
   <link rel="stylesheet" href="resume/css/style.css">
-  <meta charseet"UTF-8">
-  <meta name="viewport" content="width"
+  <meta charset"UTF-8">
+  <meta name="viewport" content="width">
+  <title>Miranda Hoyman Resume</title>
 </head>  
 <body>
   <nav>
@@ -18,7 +19,7 @@
     </ul>
   </nav>
 
-<section id="contactinfo" border: 2px var(rgb(98, 145, 240)) solid>
+<section id="contactinfo">
   <h2>Contact Information</h2>
   <p>
     <ul>
@@ -26,8 +27,9 @@
       <li>Email: miranda.hoyman465@gmail.com</li>
       <li>LinkedIn: <a href="https://www.linkedin.com/in/miranda-hoyman-767352225" target="_blank">Click Here</a></li>
     </ul>
-  </section>
-  <section id="education" border: 2px var(rgb(98, 145, 240)) solid>
+  </p>
+ </section>
+  <section id="education">
     <h2>Education</h2>
     <p>
       <ol>
@@ -36,7 +38,7 @@
       </ol>
     </p>
   </section>
-  <section id="experience" border: 2px var(rgb(98, 145, 240)) solid>
+  <section id="experience">
     <h2>Experience</h2>
     <p>
       <ol>
@@ -46,7 +48,7 @@
       </ol>
     </p>
   </section>
-  <section id="skills" border: 2px var(rgb(98, 145, 240)) solid>
+  <section id="skills">
   <h2>Skills</h2>
     <p>
       <ul>
