--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
   
 <head>
   <link rel="stylesheet" href="resume/css/style.css">
-  <meta charset"UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width">
   <title>Miranda Hoyman Resume</title>
 </head>  
