--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
 <head>
-  <link rel="stylesheet" href="resume/css/style.css">
+  <link rel="stylesheet" href="mirandarightsss.github.io/resume/css/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width">
   <title>Miranda Hoyman Resume</title>
