--- a/marketing/index.html
+++ b/marketing/index.html
@@ -4,45 +4,28 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link href="https://static1.squarespace.com/static/sitecss/5b85954ca2772c978e571f14/51/507c1fdf84ae362b5e7be44e/5b85954ca2772c978e571f2a/2149/site.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
     
 <body>
-  <h1>Miranda Hoyman</h1>
-  <nav>
-  <a href="index.html#contactinfo" class="navlinks">Contact Information</a><br>
-  <a href="index.html#education" class="navlinks">Education</a><br>
-  <a href="index.html#experience" class="navlinks">Experience</a><br>
-  <a href="index.html#skills" class="navlinks">Skills</a>
-  </nav>
-
-  <section id="contactinfo">
-    <h2>Contact Information</h2>
-    <p>Phone: 970-381-4432</p>
-    <p>Email: miranda.hoyman465@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/miranda-hoyman-767352225" target="_blank">Click Here</a></p>
-   </section>
-
-    <section id="education">
-      <h2>Education</h2>
-      <p>High School: Frontier Academy. 3.5+ GPA, Graduated with honors in 2021</p>
-      <p>College (current): University of Northern Colorado, Business (Marketing), 3.5+ GPA, Sophomore</p>
-    </section>
-
-    <section id="experience">
-      <h2>Experience</h2>
-      <p>Dairy Queen - February 2021 to August 2021, Made Blizzards</p>
-      <p>Pelican Lakes - August 2021 to December 2022, worked in Grillhouse, Sand Bar, and Pro Shop</p>
-      <p>Pelican Lakes - Feb 9th, 2023 to Present, Marketing Intern (unpaid)</p>
-    </section>
-
-    <section id="skills">
-    <h2>Skills</h2>
-      <p>Basic Photoshop and Illustrator (Graphic design and photo editing)</p>
-      <p>Basic Excel (Formulas, graphs, data entry)</p>
-      <p>Flute-Playing (Just classical, NO JAZZ)</p>
-      <p>Basic Photography (I know how to take a picture on a pretty fancy camera)</p>
-    </section>
-    <h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
+  <div class="papte-title">
+    <h1>John Galt Coffee Co.</h1>
+  </div>
+  <div id="coffeecarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="90">
+        <img src="cortado..jpg" class="d-block w-100" alt="Cortado">
+      </div>
+      <div class="carousel-item" data-bs-interval="90">
+        <img src="espresso.jpg" class="d-block w-100" alt="Espresso">
+      </div>
+      <div class="carousel-item" data-bs-interval="90">
+        <img src="macchiato.jpg" class="d-block w-100" alt="Macchiato">
+      </div>
+    </div>
+  </div>
+    <h3> <a href="https://www.johngaltcoffee.com/menu">Original Site</a> </h3>
 </body>
 </html>
