--- a/marketing/index.html
+++ b/marketing/index.html
@@ -19,10 +19,10 @@
         <img src="cortado..jpg" class="d-block w-100" alt="Cortado">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="espresso.jpg" class="d-block w-100" alt="Espresso">
+        <img src="https://www.thespruceeats.com/thmb/HJrjMfXdLGHbgMhnM0fMkDx9XPQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/what-is-espresso-765702-hero-03_cropped-ffbc0c7cf45a46ff846843040c8f370c.jpg" class="d-block w-100" alt="Espresso">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="macchiato.jpg" class="d-block w-100" alt="Macchiato">
+        <img src="https://cdn.shopify.com/s/files/1/0022/1393/7252/articles/Caffe-Macchiato-Recipe_1200x1200.webp?v=1669904984" class="d-block w-100" alt="Macchiato">
       </div>
     </div>
   </div>
