--- a/marketing/index.html
+++ b/marketing/index.html
@@ -10,7 +10,7 @@
 </head>
     
 <body>
-  <div class="papte-title">
+  <div class="title">
     <h1>John Galt Coffee Co.</h1>
   </div>
   <div id="coffeecarousel" class="carousel slide" data-bs-ride="carousel">
