--- a/marketing/index.html
+++ b/marketing/index.html
@@ -24,6 +24,12 @@
       <div class="carousel-item" data-bs-interval="3000">
         <img src="https://cdn.shopify.com/s/files/1/0022/1393/7252/articles/Caffe-Macchiato-Recipe_1200x1200.webp?v=1669904984" class="d-block w-100" alt="Macchiato">
       </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="https://img.freepik.com/premium-photo/hot-coffee-capuccino-cup-with-latte-art-wood-table-cafe_778722-16.jpg?w=2000" class="d-block w-100" alt="Capuccino">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="https://cbtl-images.s3.us-west-1.amazonaws.com/Production/Drupal/s3fs-public/styles/cafe_menu_item/public/cafe-menu/Cafe_Latte.jpg?itok=GUI54vFD" class="d-block w-100" alt="Cafe Latte">
+      </div>
     </div>
   </div>
     <h3> <a href="https://www.johngaltcoffee.com/menu">Original Site</a> </h3>
