--- a/marketing/index.html
+++ b/marketing/index.html
@@ -41,6 +41,7 @@
       </div>
     </div>
   </div>
+  <p>Our artisanal beverages are the perfect choice for any coffee lover, and with our unique, calm atmosphere, everyone is welcome!</p>
     <h3> <a href="https://www.johngaltcoffee.com/menu">Original Site</a> </h3>
 </body>
 </html>
